# ReActLM

./: .gitignore  README.md  pyproject.toml  try.py
src/reactlm/: __init__.py
src/reactlm/core/: __init__.py  agent.py  base.py  types.py
src/reactlm/llms/: __init__.py  openai.py
src/reactlm/memory/: __init__.py  redis_memory.py
src/reactlm/prompts/: __init__.py  templates.py
src/reactlm/tools/: __init__.py  search.py
