[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reactlm"
version = "0.1.0"
description = "A powerful reactive agent framework with LLM-based reasoning and autonomous capabilities"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["ai", "agents", "llm", "reactive", "language-models", "autonomous"]
authors = [
    { name = "ReActLM Team" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pydantic>=2.0.0,<3.0.0",
    "aiohttp>=3.8.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "anthropic>=0.3.0",
    "google-generativeai>=0.1.0",
    "redis>=4.0.0",
    "asyncpg>=0.27.0",
    "pillow>=9.0.0",
    "numpy>=1.21.0",
    "typing-extensions>=4.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.ruff]
select = ["E", "F", "B", "I"]
ignore = ["E501"]
target-version = "py38"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"] 